--- a/styles/education/quizy/index.module.css
+++ b/styles/education/quizy/index.module.css
@@ -1,9 +1,33 @@
+/* Question */
 div.quiz {
     width:90%;
     /* height:200px; */
     border-radius: 16px;
     border:1px solid var(--border-color);
     margin:32px auto;
+}
+div.quiz_timer {
+    width:300px;
+    height:60px;
+    margin:40px auto;
+    display: flex;
+}
+div.quiz_timer>span {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+}
+div.quiz_timer_block {
+    width:60px;
+    height:60px;
+    background-color: var(--block-color);
+    border-radius: 16px;
+    margin:0 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
 }
 .header {
     text-align: center;
@@ -24,8 +48,31 @@ div.main_test {
     gap:32px;
 }
 div.main_test_block {
-    width:100%;
-    height:60px;
-    background-color: var(--block-color);
+    width:90%;
+    padding:24px;
+    /* background-color: var(--block-color); */
     border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+/* Question to Answer */
+div.answer_block {
+    width:100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
+    /* grid-auto-columns: auto; */
+    gap:32px;
+    margin: 32px auto;
+}
+div.answer_block_row {
+    padding:24px;
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
