--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,14 @@
   margin:0;
   padding:0
 }
-
+.disable {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none; 
+            user-select: none; 
+}
 div.emoji_h1 {
   width: 26px;
   height: 26px;
@@ -106,6 +113,10 @@ p.sm {
   -o-transition: 0.2s;
   transition: 0.2s;
   opacity: 0.7
+}
+
+.text_center {
+  text-align: center;
 }
 
 /* Chrome, Safari, Edge, Opera */
