--- a/styles/login/index.module.css
+++ b/styles/login/index.module.css
@@ -1,5 +1,24 @@
+@media screen and (min-width:1900px) {
+    div.login_form {
+        width:75%;
+    }
+  }
+  @media screen and (min-width:1161px) and (max-width:1899px) {
+    div.login_form {
+        width:75%;
+    }
+  }
+  @media (min-width:601px) and (max-width:1160px) {
+    div.login_form {
+        width:90%;
+    }
+  }
+  @media (min-width:1px) and (max-width:600px) {
+    div.login_form {
+        width:100%;
+    }
+  }
 div.login_form {
-    width:100%; /*75% */
     border: 0.5px solid var(--border-color);
     border-radius: 24px;
     margin: 0 auto;
@@ -27,7 +46,7 @@ div.login_row {
 }
 input.login_input {
     padding:12px 24px 12px 64px;
-    width:200px;
+    width:233px;
     background-color: var(--block-color);
     border-radius: 100px;
     margin-top:24px;
