--- a/styles/login/index.module.css
+++ b/styles/login/index.module.css
@@ -32,6 +32,9 @@ div.login_form {
     color: var(--sub_content);
     margin-top:20px
 }
+a.text_center:hover {
+    color:var(--brand-color);
+}
 div.login_row {
     margin-top:20px;
     display: flex;
@@ -67,6 +70,10 @@ button.login_button {
     cursor: pointer;
     color:white;
 }
+button.disable {
+    opacity: 0.2;
+    cursor: not-allowed;
+}
 div.password {
     position: relative;;
 }
@@ -81,4 +88,18 @@ div.password__show {
     position: relative;
     width:24px;
     height:24px;
+}
+input.otp_keys {
+    background-color: var(--block-color);
+    margin: 0 8px;
+    width: 50px;
+    height: 50px;
+    font-size:24px;
+    text-align: center;
+    border-radius: 12px;
+}
+div.otp {
+    margin:24px 0;
+    display: flex;
+    justify-content: center;
 }
