--- a/styles/login/index.module.css
+++ b/styles/login/index.module.css
@@ -70,6 +70,15 @@ button.login_button {
     cursor: pointer;
     color:white;
 }
+button.next_button {
+    margin-top:24px;
+    width:320px;
+    height:50px;
+    background-color: var(--green_back);
+    border-radius: 24px;
+    cursor: pointer;
+    color:white;
+}
 button.disable {
     opacity: 0.2;
     cursor: not-allowed;
