--- a/styles/globals.css
+++ b/styles/globals.css
@@ -345,6 +345,24 @@ p.nav > a {
       --key_img: url(../public/img/key-light.svg)
   }
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border:none !important;
+  -webkit-text-fill-color: inherit !important;
+  -webkit-box-shadow: 0 0 0px 1000px var(--block-color) inset;
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-box-shadow: 0 1px 0 0 #26a69a, inset 0 0 0px 9999px var(--block-color);
+  box-shadow: 0 1px 0 0 #26a69a, inset 0 0 0px 9999px var(--block-color)
+}
 .sup {
   font-size:12px;
   vertical-align: 2px;
