--- a/styles/globals.css
+++ b/styles/globals.css
@@ -455,19 +455,25 @@ select:-webkit-autofill:focus {
     width:782px
   }
   div.header__logo {
-      -webkit-box-ordinal-group:2;
-          -ms-flex-order:1;
-              order:1
+    -webkit-box-ordinal-group:2;
+        -ms-flex-order:1;
+            order:1;
+            width:20%;
   }
   div.header__search {
-      -webkit-box-ordinal-group:3;
-          -ms-flex-order:2;
-              order:2
+        -webkit-box-ordinal-group:3;
+        -ms-flex-order:2;
+        order:2;
+        width:60%;
   }
   div.header__action {
       -webkit-box-ordinal-group:4;
-          -ms-flex-order:3;
-              order:3
+      -ms-flex-order:3;
+      order:3;
+      width:20%;
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
   }
   .p-m {
       margin-top:60px
@@ -507,17 +513,23 @@ select:-webkit-autofill:focus {
   div.header__logo {
       -webkit-box-ordinal-group:2;
           -ms-flex-order:1;
-              order:1
+              order:1;
+              width:20%;
   }
   div.header__search {
-      -webkit-box-ordinal-group:3;
-          -ms-flex-order:2;
-              order:2
+        -webkit-box-ordinal-group:3;
+        -ms-flex-order:2;
+        order:2;
+        width:60%;
   }
   div.header__action {
       -webkit-box-ordinal-group:4;
-          -ms-flex-order:3;
-              order:3
+      -ms-flex-order:3;
+      order:3;
+      width:20%;
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
   }
   .p-m {
       margin-top:60px
@@ -848,10 +860,10 @@ img.header__search_menu_img {
 }
 
 div.header__search {
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex
+  display: flex;
+  justify-content: center;
 }
 
 div.header__search_blocks {
@@ -950,6 +962,16 @@ div.header__action_image {
   border-radius: 24px;
   border:1px solid var(--block-color);
   background-color: var(--block-color);
+  cursor: pointer;
+  position: relative
+}
+div.header__action_login_button {
+  display: flex;
+  align-items: center;
+  padding:0 24px;
+  height: 46px;
+  border-radius: 24px;
+  background-color: var(--brand-color);
   cursor: pointer;
   position: relative
 }
