--- a/styles/constructor/acc/index.module.css
+++ b/styles/constructor/acc/index.module.css
@@ -219,6 +219,7 @@ div.main__block_interface_menu {
     -webkit-border-radius: 24px;
        -moz-border-radius: 24px;
             border-radius: 24px;;
+    margin-bottom:70px;
 }
 div.main__block_interface_menu_c {
     text-align: center;
