--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -5,13 +5,19 @@
     div.user__main_row {
         width:50%;
     }
+    div.main__block_user_row {
+        width:350px;
+    }
 }
   @media screen and (min-width:1161px) and (max-width:1899px) {
     div.user__main{
-        width:75%;
+        width:90%;
     }
     div.user__main_row {
-        width:55%;
+        width:60%;
+    }
+    div.main__block_user_row {
+        width:350px;
     }
 }
   @media (min-width:601px) and (max-width:1160px) {
@@ -20,6 +26,9 @@
     }
     div.user__main_row {
         width:80%;
+    }
+    div.main__block_user_row {
+        width:350px;
     }
   }
   @media (min-width:1px) and (max-width:600px) {
@@ -33,6 +42,9 @@
     div.user__main_row {
         width:100%;
     }
+    div.main__block_user_row {
+        width:100%;
+    }
 }
 .text_center {
     text-align: center;
@@ -43,6 +55,9 @@ div.user__main {
     border:1px solid var(--border-color);
     padding:64px 24px;
     margin:0 auto;
+}
+div.user__main:last-child {
+    margin-top:24px;
 }
 div.user__main_row {
     display: flex;
@@ -81,7 +96,7 @@ div.user__main_action {
     justify-content: center;
 }
 button.button_follow {
-    padding:10px 24px;
+    padding:10px 30px;
     background-color: var(--blue_back);
     border-radius: 24px;
     cursor: pointer;
@@ -89,9 +104,56 @@ button.button_follow {
     color:hsl(0, 0%, 100%);
 }
 button.button_more {
-    padding:10px 24px;
+    padding:10px 30px;
     background-color: var(--block-color);
     border-radius: 24px;
     cursor: pointer;
     margin: 0 8px;
+}
+div.user__main_info {
+    width:100%;
+    display: flex;
+    justify-content: center;
+    /* margin-bottom:32px; */
+}
+div.user__main_info_block {
+    width:75px;
+    /* margin: 0 16px; */
+    text-align: center;
+    cursor: pointer;
+    padding:16px;
+    border-radius: 24px;
+}
+div.user__main_info_block:hover {
+    background-color: var(--block-color);
+}
+.small_text {
+    font-size:14px;
+    color:var(--sub_content);
+}
+/* div.main__block_user_row {
+    margin-top:8px;
+} */
+div.main__block_user {
+    margin: 16px auto;
+    height:60px;
+    background-color: var(--block-color);
+    border-radius: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+div.main__block_user_image {
+    width: 36px;
+    height:36px;
+    margin: 0 24px;
+    border-radius: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div.main__block_user_image_row {
+    position: relative;
+    width: 24px;
+    height:24px;
 }
