--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -11,7 +11,7 @@
 }
   @media screen and (min-width:1161px) and (max-width:1899px) {
     div.user__main{
-        width:90%;
+        width:95%;
     }
     div.user__main_row {
         width:60%;
@@ -55,20 +55,19 @@ div.user__main {
     border:1px solid var(--border-color);
     padding:64px 24px;
     margin:0 auto;
-}
-div.user__main:last-child {
-    margin-top:24px;
+    display: flex;
 }
 div.user__main_row {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin:0 auto;
+    /* width:40%; */
+    /* align-items: center; */
+    /* margin:0 auto; */
 }
 div.user__main_portfolio {
     width:100%;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     flex-wrap: wrap;
     margin-bottom:24px;
@@ -156,4 +155,40 @@ div.main__block_user_image_row {
     position: relative;
     width: 24px;
     height:24px;
+}
+div.main__user_action {
+    width:100%;
+    height:300px;
+    /* background-color: aliceblue; */
+}
+div.main__user_action_prev {
+    margin-top:16px;
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+    gap:24px;
+    margin-top:36px;
+}
+div.main__user_action_prev_row {
+    width:90px;
+    cursor: pointer;
+    text-align: center;
+    font-size:13px;
+    line-height: 24px;
+}
+div.main__user_action_prev_row_block {
+    position: relative;
+    width:90px;
+    height:90px;
+    border-radius: 24px;
+    background-color: var(--block-color);
+    margin-bottom:8px;
+}
+img.main__user_action_prev_row_block_img {
+    border-radius: 24px;
+}
+.main__user_action_prev_row_block_text {
+    font-size: 10px;
+    list-style: 20px;
+    color:var(--sub_content)
 }
