--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -1,6 +1,8 @@
 @media screen and (min-width:1900px) {
     div.user__main {
-        width:75%;
+        width:1500px;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
     }
     div.user__main_row {
         width:50%;
@@ -8,32 +10,71 @@
     div.main__block_user_row {
         width:350px;
     }
+    div.user__main_portfolio {
+        display: flex;
+    }
+    div.main__user_action {
+        width:100%;
+        padding:0 36px;
+    }
 }
   @media screen and (min-width:1161px) and (max-width:1899px) {
     div.user__main{
         width:95%;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
     }
     div.user__main_row {
-        width:60%;
+        width:40%;
     }
     div.main__block_user_row {
         width:350px;
+    }
+    div.main__user_action {
+        width:60%;
+        padding:0 36px;
+    }
+    div.user__main_portfolio {
+        display: flex;
     }
 }
   @media (min-width:601px) and (max-width:1160px) {
     div.user__main {
-        width:90%;
+        width:95%;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
     }
     div.user__main_row {
-        width:80%;
+        width:40%;
     }
     div.main__block_user_row {
-        width:350px;
+        width:100%;
+    }
+    div.user__main_portfolio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    div.main__user_action {
+        width:60%;
+        padding:0 36px;
+    }
+    .need_center {
+        margin-top:16px;
+        text-align: center;
     }
   }
   @media (min-width:1px) and (max-width:600px) {
     div.user__main {
-        width:85%;
+        width:95%;
+        padding:16px 0;
+    }
+    div.user__main_portfolio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .need_center {
         margin-top:16px;
@@ -45,6 +86,9 @@
     div.main__block_user_row {
         width:100%;
     }
+    div.main__user_action {
+        width:100%;
+    }
 }
 .text_center {
     text-align: center;
@@ -52,24 +96,22 @@
 }
 div.user__main {
     border-radius: 24px;
-    border:1px solid var(--border-color);
-    padding:64px 24px;
     margin:0 auto;
     display: flex;
 }
 div.user__main_row {
     display: flex;
     flex-direction: column;
+    align-items: center;
     /* width:40%; */
     /* align-items: center; */
     /* margin:0 auto; */
 }
 div.user__main_portfolio {
     width:100%;
-    display: flex;
-    /* justify-content: center; */
+    /* display: flex; */
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     margin-bottom:24px;
     /* flex-direction: column; */
 }
@@ -155,11 +197,6 @@ div.main__block_user_image_row {
     position: relative;
     width: 24px;
     height:24px;
-}
-div.main__user_action {
-    width:100%;
-    height:300px;
-    /* background-color: aliceblue; */
 }
 div.main__user_action_prev {
     margin-top:16px;
