--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -5,16 +5,16 @@
         border:1px solid var(--border-color);
     }
     div.user__main_row {
-        width:50%;
+        width:30%;
     }
     div.main__block_user_row {
-        width:350px;
+        width:300px;
     }
     div.user__main_portfolio {
         display: flex;
     }
     div.main__user_action {
-        width:100%;
+        width:60%;
         padding:0 36px;
     }
 }
@@ -25,10 +25,10 @@
         border:1px solid var(--border-color);
     }
     div.user__main_row {
-        width:40%;
+        width:30%;
     }
     div.main__block_user_row {
-        width:350px;
+        width:300px;
     }
     div.main__user_action {
         width:60%;
@@ -38,14 +38,14 @@
         display: flex;
     }
 }
-  @media (min-width:601px) and (max-width:1160px) {
+  @media (min-width:751px) and (max-width:1160px) {
     div.user__main {
         width:95%;
         padding:64px 24px;
         border:1px solid var(--border-color);
     }
     div.user__main_row {
-        width:40%;
+        width:30%;
     }
     div.main__block_user_row {
         width:100%;
@@ -65,7 +65,7 @@
         text-align: center;
     }
   }
-  @media (min-width:1px) and (max-width:600px) {
+  @media (min-width:1px) and (max-width:750px) {
     div.user__main {
         width:95%;
     }
@@ -116,8 +116,8 @@ div.user__main_portfolio {
 }
 div.user__main_portfolio_avatar {
     position: relative;
-    width:100px;
-    height:100px;
+    width:80px;
+    height:80px;
     border-radius: 100%;
     background-color: var(--block-color);
     margin:0 12px;
@@ -126,8 +126,9 @@ div.user__main_portfolio_row {
     margin:0 12px;
 }
 p.portfolio_sub {
-    margin-top:8px;
-    color:var(--sub_content)
+    margin-top:4px;
+    color:var(--sub_content);
+    font-size:14px;
 }
 div.user__main_action {
     margin-top:24px;
