--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1513,6 +1513,17 @@ div.main_back_block {
   display: grid;
   grid-template-columns: 50% 40%;
 }
+div.main_back_block_fixed {
+  width:100%;
+  padding:var(--s-1);
+  background-color: var(--header-color);
+  border-radius: 24px 24px 0 0;
+  display: grid;
+  grid-template-columns: 50% 40%;
+  top:0;
+  position:fixed;
+  z-index: 999;
+}
 div.main_back_action {
   width:100%;
   display: flex;
