--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@ input[type="date"]:valid::before {
 
 input[type="date"]::-webkit-calendar-picker-indicator {
     content: url(../public/emoji-small/calendar.webp);
+    cursor: pointer;
 }
 
 
