--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,17 @@
   margin:0;
   padding:0
 }
+
+img {
+  display: none;
+}
+
+
+img[src] {
+ display: block;
+}
+
+
 .disable {
   -webkit-touch-callout: none;
     -webkit-user-select: none;
