--- a/styles/globals.css
+++ b/styles/globals.css
@@ -327,7 +327,9 @@ p.nav > a {
       --search-block: hsl(240, 2%, 28%);
       --brand_back:hsl(241, 100%, 74%);
       --email_img: url(../public/img/email-night.svg);
-      --key_img: url(../public/img/key-night.svg)
+      --key_img: url(../public/img/key-night.svg);
+      --skeleton-start:hsl(240, 1%, 14%);
+      --skeleton-end:hsl(240, 1%, 34%)
   }
 }
 @media (prefers-color-scheme: light) {
@@ -366,9 +368,27 @@ p.nav > a {
       --search-block: hsl(210, 7%, 95%);
       --brand_back:hsl(248, 57%, 59%);
       --email_img: url(../public/img/email-light.svg);
-      --key_img: url(../public/img/key-light.svg)
+      --key_img: url(../public/img/key-light.svg);
+      --skeleton-start:hsl(0, 0%, 70%);
+      --skeleton-end:hsl(0, 0%, 88%);
   }
 }
+
+div.skeleton {
+  opacity: .7;
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+  0% {
+      background-color: var(--skeleton-start);
+  }
+
+  100% {
+      background-color: var(--skeleton-end);
+  }
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus
