--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -4,6 +4,12 @@
         padding:64px 24px;
         border:1px solid var(--border-color);
     }
+    div.user__main_portf {
+        width:1500px;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
+        border-radius: 24px;
+    }
     div.user__main_row {
         width:30%;
     }
@@ -13,6 +19,12 @@
     div.user__main_portfolio {
         display: flex;
         height: 80px;
+    }
+    div.user__main_portfolio_block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     div.main__user_action {
         width:60%;
@@ -33,6 +45,12 @@
         padding:64px 24px;
         border:1px solid var(--border-color);
     }
+    div.user__main_portf {
+        width:95%;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
+        border-radius: 24px;
+    }
     div.no_center {
         width:300px;
     }
@@ -50,6 +68,12 @@
         display: flex;
         height: 80px;
     }
+    div.user__main_portfolio_block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     div.header_text_preloader_1 {
         width:190px;
         height:24px;
@@ -65,6 +89,12 @@
         padding:64px 24px;
         border:1px solid var(--border-color);
     }
+    div.user__main_portf {
+        width:95%;
+        padding:64px 24px;
+        border:1px solid var(--border-color);
+        border-radius: 24px;
+    }
     div.user__main_row {
         width:30%;
     }
@@ -75,6 +105,12 @@
         width:100%;
     }
     div.user__main_portfolio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    div.user__main_portfolio_block {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -103,7 +139,17 @@
     div.user__main {
         width:95%;
     }
+    div.user__main_portf {
+        padding: 36px 0;
+        width:95%;
+    }
     div.user__main_portfolio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    div.user__main_portfolio_block {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -135,6 +181,17 @@
         height:16px;
         margin: 0 auto;
     }
+}
+.need_center1 {
+    margin-top:16px;
+    text-align: center;
+}
+div.user__main_row_block {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 div.header_text_preloader_1 {
     border-radius: 24px;
