--- a/styles/user/index.module.css
+++ b/styles/user/index.module.css
@@ -127,7 +127,7 @@
     div.header_text_preloader_1 {
         width:180px;
         height:24px;
-        margin-top:16px;
+        margin-top:20px;
     }
     div.header_text_preloader_2 {
         margin: 0 auto;
@@ -148,6 +148,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding:24px 0;
     }
     div.user__main_portfolio_block {
         display: flex;
@@ -174,7 +175,7 @@
     div.header_text_preloader_1 {
         width:220px;
         height:24px;
-        margin-top:16px;
+        margin-top:20px;
     }
     div.header_text_preloader_2 {
         width:200px;
@@ -219,10 +220,8 @@ div.user__main_row {
 }
 div.user__main_portfolio {
     width:100%;
-    /* display: flex; */
     align-items: center;
     margin-bottom:24px;
-    /* flex-direction: column; */
 }
 div.user__main_portfolio_avatar {
     position: relative;
