--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -127,7 +127,7 @@ input.login_input {
     padding:10px 24px 10px 64px;
     background-color: var(--block-color);
     border-radius: 24px;
-    margin-top:16px;
+    /* margin-top:16px; */
 }
 input.password_input {
     padding:10px 64px;
