--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -147,14 +147,16 @@ button.login_button {
     cursor: pointer;
     color:white;
 }
-button.next_button {
-    margin-top:24px;
-    width:320px;
-    height:50px;
+.next_button {
+    padding:8px 16px;
     background-color: var(--green_back);
     border-radius: 24px;
     cursor: pointer;
     color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left:8px;
 }
 button.disable {
     opacity: 0.2;
@@ -236,4 +238,11 @@ div.signin_auth_form_image {
 img.signin_auth_form_pic {
     width:60px;
     height: auto;
+}
+div.flex {
+    margin-top:32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
