--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -157,6 +157,7 @@ button.login_button {
     align-items: center;
     justify-content: center;
     margin-left:8px;
+    font-size:14px;
 }
 button.disable {
     opacity: 0.2;
