--- a/styles/globals.css
+++ b/styles/globals.css
@@ -970,10 +970,10 @@ input.header__search_input {
   padding:var(--i-s);
   height:46px;
   font-size:16px;
-  border:1.5px solid var(--input_border);
+  border:1.5px solid var(--border-color);
   border-radius: 24px;
   color:var(--font-color);
-  background: var(--search_icon) no-repeat scroll 11px 11px var(--input_back)
+  background: var(--search_icon) no-repeat scroll 11px 11px var(--block-color)
 }
 input.header__search_input::-webkit-input-placeholder {
   color: var(--input_back_text)
