--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -131,14 +131,14 @@ input.login_input {
     padding:10px 24px 10px 64px;
     background-color: var(--block-color);
     border-radius: 24px;
-    border:1.5px solid var(--border-color)
+    border:2px solid var(--input_border);
     /* margin-top:16px; */
 }
 input.password_input {
     padding:10px 64px;
     background-color: var(--block-color);
     border-radius: 24px;
-    border:1.5px solid var(--border-color)
+    border:2px solid var(--input_border);
     /* margin-top:24px; */
 }
 button.login_button {
