--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -113,7 +113,7 @@ a.text_center:hover {
     color:var(--brand-color);
 }
 div.login_row {
-    margin-top:20px;
+    margin:20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
