--- a/styles/signin/index.module.css
+++ b/styles/signin/index.module.css
@@ -141,13 +141,16 @@ input.password_input {
     border:1.5px solid var(--input_border);
     /* margin-top:24px; */
 }
-button.login_button {
+.login_button {
     margin-top:24px;
     height:46px;
     background-color: var(--brand-color);
     border-radius: 24px;
     cursor: pointer;
     color:white;
+}
+.login_button:hover {
+    opacity: 0.5;
 }
 .next_button {
     padding:8px 16px;
