--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -151,7 +151,7 @@ div.main__calculator {
                -moz-box-orient: vertical;
                -moz-box-direction: normal;
             flex-direction: column;
-    border: 1.5px solid var(--input_border);
+    border: 1.5px solid var(--border-color);
     -webkit-border-radius: 24px;
        -moz-border-radius: 24px;
             border-radius: 24px;
@@ -181,7 +181,7 @@ div.main__result {
                -moz-box-orient: vertical;
                -moz-box-direction: normal;
             flex-direction: column;
-    border: 1.5px solid var(--input_border);
+    border: 1.5px solid var(--border-color);
     -webkit-border-radius: 24px;
        -moz-border-radius: 24px;
             border-radius: 24px;
