--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,7 +97,7 @@ h6 {
 span.head {
   font-size:13px;
   line-height:20px;
-  font-weight: 700
+  font-weight: 700;
 }
 span.head_1 {
   font-size:15px;
@@ -339,7 +339,8 @@ p.nav > a {
       --menu-icon:url(../public/img/menu.svg);
       --logo:url(../public/img/logo.webp);
       --back:hsl(210, 10%, 96%);
-      --background-color:hsl(210, 10%, 96%);
+      --background-color:rgba(0, 0, 0, 0.05);
+      /* --background-color:hsl(210, 10%, 96%); */
       --header-color:hsl(0, 0%, 100%);
       --block-color:hsl(220, 14%, 95%);
       --block-color_transparent:hsla(0, 0%, 87.5%, 0.5);
@@ -351,13 +352,13 @@ p.nav > a {
       --nav_block_blur:hsla(0, 0%, 98%,0.7);
       --font-color:hsl(225, 15%, 16%);
       --brand-color:hsl(248, 57%, 47%);
-      --sub_content:#777E90;
+      --sub_content:hsl(0, 0%, 38%);
       --green_back: hsl(135, 59%, 49%);
       --purple_back:hsl(280, 68%, 60%);
       --blue_back: hsl(211, 100%, 50%);
       --red_back:hsl(349, 100%, 59%);
       --orange_back:hsl(36, 100%, 52%);
-      --input_back_text:#777e90;
+      --input_back_text:#606060;
       --input_border:#E6E8EC;
       --border-color:hsl(216, 10%, 90%);
       --search_icon: url(../public/img/search.svg);
@@ -536,7 +537,7 @@ select:-webkit-autofill:focus {
   :root {
       --m-1: 30px 64px;
       --m-2: 64px 64px;
-      --m-3: 48px 64px;
+      --m-3: 64px 64px;
       --m-4: 16px 64px 48px 64px;
       --s-1: 32px 64px;
       --s-2: 16px 64px;
@@ -595,7 +596,7 @@ select:-webkit-autofill:focus {
   :root {
       --m-1: 30px 32px;
       --m-2: 58px 32px;
-      --m-3: 32px 32px;
+      --m-3: 64px 32px;
       --m-4: 16px 32px 48px 32px;
       --s-1: 32px 32px;
       --s-2: 16px 32px;
