--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -96,7 +96,10 @@
     div.main__menu_nav_block_image_pic {
         width:36px;
         height:36px;
-        position: relative
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -194,7 +197,10 @@
     div.main__menu_nav_block_image_pic {
         width:36px;
         height:36px;
-        position: relative
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -282,15 +288,18 @@
     div.main__menu_nav_block_image_pic {
         width:36px;
         height:36px;
-        position: relative
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 @media (min-width:1px) and (max-width:600px) {
     div.main__menu_nav {
         background-color: transparent;
-        width:-webkit-calc(100%-22px);
+        /* width:-webkit-calc(100%-22px);
         width:-moz-calc(100%-22px);
-        width:calc(100%-22px);
+        width:calc(100%-22px); */
         padding:16px 0;
         overflow-x: auto;
         overflow-y: hidden;
@@ -314,17 +323,16 @@
                    -moz-box-pack: center;
                 justify-content: center;
         -ms-grid-columns: 24.5vw 0px 24.5vw 0px 24.5vw 0px 24.5vw;
-        grid-template-columns: repeat(4,24.5vw);
+        grid-template-columns: repeat(4,25vw);
         gap: 24px 0px;
         margin:4px 0
     }
     div.main__menu_nav_block {
-        width:90%;
+        width:100%;
         height:100px;
         -webkit-border-radius: 24px;
            -moz-border-radius: 24px;
                 border-radius: 24px;
-        margin: 0 4px;
         cursor: pointer;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -347,7 +355,7 @@
             -ms-flex-pack: center;
                 -webkit-justify-content: center;
                    -moz-box-pack: center;
-                justify-content: center; 
+                justify-content: center;
     }
     span.nav_header {
         margin-top:16px;
@@ -381,7 +389,10 @@
     div.main__menu_nav_block_image_pic {
         width:36px;
         height:36px;
-        position: relative
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 div.main__index_block_row {
@@ -393,7 +404,10 @@ div.main__index_block_row {
 }
 div.main__index_block_row_b {
     width:160px;
-    cursor: pointer
+    cursor: pointer;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 div.main__index_block {
     width:160px;
